solved about page news section image alignment

--- a/src/components/aboutpagecomponents/autononewssection/autononewssection.module.scss
+++ b/src/components/aboutpagecomponents/autononewssection/autononewssection.module.scss
@@ -76,7 +76,8 @@
             align-items: center;
 
             img {
-                object-fit: none;
+                // object-fit: none;
+                object-position: 50% 50%;
             }
         }
     }
